[package]
name = "random-wallpaper"
version = "1.0.2"
authors = ["David Wildasin <dragonmaus@posteo.net>"]
edition = "2021"
rust-version = "1.74.0"
description = "Set a random wallpaper from a directory tree of background images"
repository = "http://git.dragonma.us/rust/random-wallpaper"
license = "BBSD-3-Clause-Clear"
categories = ["command-line-utilities"]
publish = false

[dependencies]
getopt = "1"
imghdr = "0.7"
rand = "0.8"
walkdir = "2"
[dependencies.program]
git = "git://git.dragonma.us/rust/program"
[dependencies.realpath]
git = "git://git.dragonma.us/rust/realpath"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["winuser"]
